--- a/ratemyspeech/package.json
+++ b/ratemyspeech/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "ratemyspeech",
+  "name": "rms",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@capacitor/android": "5.5.0",
-    "@capacitor/core": "^5.5.0",
-    "@capacitor/ios": "5.5.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "@google-cloud/storage": "^7.3.1",
-    "@ionic/cli": "^7.1.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "uuid": "^8.3.2",
-    "yarn": "^1.22.19"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-ga": "^3.3.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -45,8 +38,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@capacitor/cli": "^5.5.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
